maybe this fixes the layout problem

--- a/less/implementations.less
+++ b/less/implementations.less
@@ -556,7 +556,7 @@ article.implementations-info {
                   padding-left: 17px;
                 }
 
-                &.head-col {
+                &.head-col, &.head-col > a {
                   position: absolute;
                   left: 0;
                   top: auto;
